# AAGL

./: .gitignore  .gitmodules  CMakeLists.txt
AAGL/: AAGL.h  AssetFilesystem.cpp  AssetFilesystem.h  FrameBuffer.cpp  FrameBuffer.h  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  SDFFont.cpp  SDFFont.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h
AAGL/glad/: glad.c
